test/syc/good/uminus.c
/*
 * Unary minus
 */

int a;

int uminus(void)
{
	return -a;
}
