test/syc/bad/staticfdefafterns.c
/*
 * Static 'foo' was previously declared as non-static.
 */
int foo(void);

static int foo(void)
{
}
